// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getOrderForCardPayment result from getOrderForCardPayment to match snapshot 1`] = `
{
  "@context": "https://schema.org",
  "@type": "Order",
  "acceptedOffer": [
    {
      "@type": "Offer",
      "itemOffered": {
        "@type": "GovernmentService",
        "category": "Shared property",
        "isRelatedTo": {
          "@type": "Person",
          "address": {
            "@type": "PostalAddress",
            "addressCountry": "Ireland",
            "addressLocality": "Aut molestiae nihil ",
            "addressRegion": "Clare",
            "postalCode": "AAA 0000",
            "streetAddress": "653 White Hague Extension",
          },
          "email": "kekyzo@mailinator.com",
          "familyName": "Obrien",
          "givenName": "Cruz",
          "name": "Cruz Obrien",
          "owns": {
            "@type": "Accommodation",
            "additionalProperty": [
              {
                "@type": "PropertyValue",
                "name": "Planning Permission",
                "value": "Granted",
              },
            ],
            "additionalType": "House",
            "address": {
              "@type": "PostalAddress",
              "addressCountry": "Ireland",
              "addressLocality": "Aut molestiae nihil",
              "addressRegion": "Cavan",
              "postalCode": "AAA 0001",
              "streetAddress": "532 West Rocky Milton Freeway",
            },
            "containsPlace": [
              {
                "additionalType": "shared",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "1",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "shared",
                  "value": "1",
                },
              },
              {
                "additionalType": "private",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "1",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "private",
                  "value": "1",
                },
              },
            ],
          },
          "telephone": "+353851231234",
          "worksFor": {
            "@type": "Organization",
            "name": "All Human",
          },
        },
        "name": "STL Registration",
      },
      "priceCurrency": "EUR",
    },
    {
      "@type": "Offer",
      "itemOffered": {
        "@type": "GovernmentService",
        "category": "Entire property",
        "isRelatedTo": {
          "@type": "Person",
          "address": {
            "@type": "PostalAddress",
            "addressCountry": "Ireland",
            "addressLocality": "Corrupti fugiat ad",
            "addressRegion": "Carlow",
            "postalCode": "AAA 0002",
            "streetAddress": "634 New Freeway",
          },
          "email": "pakicihi@mailinator.com",
          "familyName": "Dunlap",
          "givenName": "Herman",
          "name": "Herman Dunlap",
          "owns": {
            "@type": "Accommodation",
            "additionalProperty": [
              {
                "@type": "PropertyValue",
                "name": "Planning Permission",
                "value": "Granted",
              },
            ],
            "additionalType": "Apartment / Flat",
            "address": {
              "@type": "PostalAddress",
              "addressCountry": "Ireland",
              "addressLocality": "Corrupti fugiat ad",
              "addressRegion": "Carlow",
              "postalCode": "AAA 0002",
              "streetAddress": "634 New Freeway",
            },
            "amenityFeature": [
              {
                "@type": "LocationFeatureSpecification",
                "name": "occupancy",
                "value": "1",
              },
            ],
            "numberOfBedrooms": "1",
          },
          "telephone": "+353851231234",
          "worksFor": {
            "@type": "Organization",
            "name": "All Human",
          },
        },
        "name": "STL Registration",
      },
      "priceCurrency": "EUR",
    },
    {
      "@type": "Offer",
      "itemOffered": {
        "@type": "GovernmentService",
        "category": "Multiple units",
        "isRelatedTo": {
          "@type": "Person",
          "address": {
            "@type": "PostalAddress",
            "addressCountry": "American Samoa",
            "addressLocality": "Pago Pago",
            "addressRegion": "Maoputasi County",
            "postalCode": "ZIP 0000",
            "streetAddress": "Samoa West Avenue",
          },
          "email": "mejeqyhal@mailinator.com",
          "familyName": "Barron",
          "givenName": "Ian",
          "name": "Ian Barron",
          "owns": {
            "@type": "LodgingBusiness",
            "additionalProperty": [
              {
                "@type": "PropertyValue",
                "name": "Planning Permission",
                "value": "Outstanding",
              },
            ],
            "address": {
              "@type": "PostalAddress",
              "addressCountry": "Ireland",
              "addressLocality": "Ut consequat Saepe ",
              "addressRegion": "Cork",
              "postalCode": "AAA 0003",
              "streetAddress": "740 Rocky Clarendon Avenue",
            },
            "containsPlace": [
              {
                "@type": "Accommodation",
                "additionalType": "Hostel",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "1",
                  },
                ],
              },
            ],
          },
          "telephone": "+353851231234",
          "worksFor": {
            "@type": "Organization",
            "name": "All Human",
          },
        },
        "name": "STL Registration",
      },
      "priceCurrency": "EUR",
    },
    {
      "@type": "Offer",
      "itemOffered": {
        "@type": "GovernmentService",
        "category": "Shared property",
        "isRelatedTo": {
          "@type": "Person",
          "address": {
            "@type": "PostalAddress",
            "addressCountry": "Ireland",
            "addressLocality": "Vitae adipisci non t",
            "addressRegion": "Clare",
            "postalCode": "AAA 0004",
            "streetAddress": "84 West Rocky Oak Street",
          },
          "email": "nove@mailinator.com",
          "familyName": "Newman",
          "givenName": "Minerva",
          "name": "Minerva Newman",
          "owns": {
            "@type": "Accommodation",
            "additionalProperty": [
              {
                "@type": "PropertyValue",
                "name": "Planning Permission",
                "value": "Granted",
              },
            ],
            "additionalType": "Room Special",
            "address": {
              "@type": "PostalAddress",
              "addressCountry": "Ireland",
              "addressLocality": "Vitae adipisci non t",
              "addressRegion": "Clare",
              "postalCode": "AAA 0004",
              "streetAddress": "84 West Rocky Oak Street",
            },
            "containsPlace": [
              {
                "additionalType": "shared",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "1",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "shared",
                  "value": "1",
                },
              },
              {
                "additionalType": "private",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "1",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "private",
                  "value": "1",
                },
              },
            ],
          },
          "telephone": "+353851231234",
          "worksFor": {
            "@type": "Organization",
            "name": "All Human",
          },
        },
        "name": "STL Registration",
      },
      "priceCurrency": "EUR",
    },
    {
      "@type": "Offer",
      "itemOffered": {
        "@type": "GovernmentService",
        "category": "Entire property",
        "isRelatedTo": {
          "@type": "Person",
          "address": {
            "@type": "PostalAddress",
            "addressCountry": "Ireland",
            "addressLocality": "Consequatur Ut dign",
            "addressRegion": "Cork",
            "postalCode": "AAA 0005",
            "streetAddress": "80 Cowley Avenue",
          },
          "email": "vowuraqozo@mailinator.com",
          "familyName": "Meadows",
          "givenName": "Blake",
          "name": "Blake Meadows",
          "owns": {
            "@type": "Accommodation",
            "additionalProperty": [
              {
                "@type": "PropertyValue",
                "name": "Planning Permission",
                "value": "Outstanding",
              },
            ],
            "additionalType": "Entire prop Special",
            "address": {
              "@type": "PostalAddress",
              "addressCountry": "Ireland",
              "addressLocality": "Consequatur Ut dign",
              "addressRegion": "Cork",
              "postalCode": "AAA 0005",
              "streetAddress": "80 Cowley Avenue",
            },
            "amenityFeature": [
              {
                "@type": "LocationFeatureSpecification",
                "name": "occupancy",
                "value": "1",
              },
            ],
            "numberOfBedrooms": "1",
          },
          "telephone": "+353851231234",
          "worksFor": {
            "@type": "Organization",
            "name": "All Human",
          },
        },
        "name": "STL Registration",
      },
      "priceCurrency": "EUR",
    },
    {
      "@type": "Offer",
      "itemOffered": {
        "@type": "GovernmentService",
        "category": "Multiple units",
        "isRelatedTo": {
          "@type": "Person",
          "address": {
            "@type": "PostalAddress",
            "addressCountry": "Ireland",
            "addressLocality": "Reiciendis eum moles",
            "addressRegion": "Donegal",
            "postalCode": "AAA 0006",
            "streetAddress": "84 Milton Road",
          },
          "email": "raleso@mailinator.com",
          "familyName": "Hanson",
          "givenName": "Isabella",
          "name": "Isabella Hanson",
          "owns": {
            "@type": "LodgingBusiness",
            "additionalProperty": [
              {
                "@type": "PropertyValue",
                "name": "Planning Permission",
                "value": "Outstanding",
              },
            ],
            "address": {
              "@type": "PostalAddress",
              "addressCountry": "Ireland",
              "addressLocality": "Reiciendis eum moles",
              "addressRegion": "Donegal",
              "postalCode": "AAA 0006",
              "streetAddress": "84 Milton Road",
            },
            "containsPlace": [
              {
                "@type": "Accommodation",
                "additionalType": "Activity or adventure centre",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "2",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "Room",
                  "value": "1",
                },
              },
              {
                "@type": "Accommodation",
                "additionalType": "Hostel",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "2",
                  },
                ],
              },
              {
                "@type": "Accommodation",
                "additionalType": "Apartments - student accommodation",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "2",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "Own Door Unit",
                  "value": "1",
                },
              },
              {
                "@type": "Accommodation",
                "additionalType": "Multiple Other Special",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "2",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "Number",
                  "value": "1",
                },
              },
            ],
          },
          "telephone": "+353851231234",
          "worksFor": {
            "@type": "Organization",
            "name": "All Human",
          },
        },
        "name": "STL Registration",
      },
      "priceCurrency": "EUR",
    },
  ],
  "customer": {
    "@type": "Person",
    "email": "QAtest01@parse.meetinireland.com",
    "identifier": [
      {
        "@type": "PropertyValue",
        "propertyID": "B2C",
        "value": "e86b4ebd-1a38-4757-a225-30fc2a2fc0e3",
        "valueReference": "https://fidigitalenterprisedps.b2clogin.com/6548f36a-b4b0-4666-9615-e4172baf2f4d/v2.0/",
      },
    ],
    "name": "QA test",
    "telephone": "",
    "worksFor": {
      "@type": "Organization",
      "name": "",
    },
  },
  "partOfInvoice": {
    "@type": "Invoice",
    "totalPaymentDue": {
      "@type": "PriceSpecification",
      "priceCurrency": "EUR",
    },
  },
}
`;

exports[`getOrderForZeroPayment result from getOrderForZeroPayment to match snapshot 1`] = `
{
  "@context": "https://schema.org",
  "@type": "Order",
  "acceptedOffer": [
    {
      "@type": "Offer",
      "itemOffered": {
        "@type": "GovernmentService",
        "category": "Shared property",
        "isRelatedTo": {
          "@type": "Person",
          "address": {
            "@type": "PostalAddress",
            "addressCountry": "Ireland",
            "addressLocality": "Aut molestiae nihil ",
            "addressRegion": "Clare",
            "postalCode": "AAA 0000",
            "streetAddress": "653 White Hague Extension",
          },
          "email": "kekyzo@mailinator.com",
          "familyName": "Obrien",
          "givenName": "Cruz",
          "name": "Cruz Obrien",
          "owns": {
            "@type": "Accommodation",
            "additionalProperty": [
              {
                "@type": "PropertyValue",
                "name": "Planning Permission",
                "value": "Granted",
              },
            ],
            "additionalType": "House",
            "address": {
              "@type": "PostalAddress",
              "addressCountry": "Ireland",
              "addressLocality": "Aut molestiae nihil",
              "addressRegion": "Cavan",
              "postalCode": "AAA 0001",
              "streetAddress": "532 West Rocky Milton Freeway",
            },
            "containsPlace": [
              {
                "additionalType": "shared",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "1",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "shared",
                  "value": "1",
                },
              },
              {
                "additionalType": "private",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "1",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "private",
                  "value": "1",
                },
              },
            ],
          },
          "telephone": "+353851231234",
          "worksFor": {
            "@type": "Organization",
            "name": "All Human",
          },
        },
        "name": "STL Registration",
      },
      "price": 0,
      "priceCurrency": "EUR",
    },
    {
      "@type": "Offer",
      "itemOffered": {
        "@type": "GovernmentService",
        "category": "Entire property",
        "isRelatedTo": {
          "@type": "Person",
          "address": {
            "@type": "PostalAddress",
            "addressCountry": "Ireland",
            "addressLocality": "Corrupti fugiat ad",
            "addressRegion": "Carlow",
            "postalCode": "AAA 0002",
            "streetAddress": "634 New Freeway",
          },
          "email": "pakicihi@mailinator.com",
          "familyName": "Dunlap",
          "givenName": "Herman",
          "name": "Herman Dunlap",
          "owns": {
            "@type": "Accommodation",
            "additionalProperty": [
              {
                "@type": "PropertyValue",
                "name": "Planning Permission",
                "value": "Granted",
              },
            ],
            "additionalType": "Apartment / Flat",
            "address": {
              "@type": "PostalAddress",
              "addressCountry": "Ireland",
              "addressLocality": "Corrupti fugiat ad",
              "addressRegion": "Carlow",
              "postalCode": "AAA 0002",
              "streetAddress": "634 New Freeway",
            },
            "amenityFeature": [
              {
                "@type": "LocationFeatureSpecification",
                "name": "occupancy",
                "value": "1",
              },
            ],
            "numberOfBedrooms": "1",
          },
          "telephone": "+353851231234",
          "worksFor": {
            "@type": "Organization",
            "name": "All Human",
          },
        },
        "name": "STL Registration",
      },
      "price": 0,
      "priceCurrency": "EUR",
    },
    {
      "@type": "Offer",
      "itemOffered": {
        "@type": "GovernmentService",
        "category": "Multiple units",
        "isRelatedTo": {
          "@type": "Person",
          "address": {
            "@type": "PostalAddress",
            "addressCountry": "American Samoa",
            "addressLocality": "Pago Pago",
            "addressRegion": "Maoputasi County",
            "postalCode": "ZIP 0000",
            "streetAddress": "Samoa West Avenue",
          },
          "email": "mejeqyhal@mailinator.com",
          "familyName": "Barron",
          "givenName": "Ian",
          "name": "Ian Barron",
          "owns": {
            "@type": "LodgingBusiness",
            "additionalProperty": [
              {
                "@type": "PropertyValue",
                "name": "Planning Permission",
                "value": "Outstanding",
              },
            ],
            "address": {
              "@type": "PostalAddress",
              "addressCountry": "Ireland",
              "addressLocality": "Ut consequat Saepe ",
              "addressRegion": "Cork",
              "postalCode": "AAA 0003",
              "streetAddress": "740 Rocky Clarendon Avenue",
            },
            "containsPlace": [
              {
                "@type": "Accommodation",
                "additionalType": "Hostel",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "1",
                  },
                ],
              },
            ],
          },
          "telephone": "+353851231234",
          "worksFor": {
            "@type": "Organization",
            "name": "All Human",
          },
        },
        "name": "STL Registration",
      },
      "price": 0,
      "priceCurrency": "EUR",
    },
    {
      "@type": "Offer",
      "itemOffered": {
        "@type": "GovernmentService",
        "category": "Shared property",
        "isRelatedTo": {
          "@type": "Person",
          "address": {
            "@type": "PostalAddress",
            "addressCountry": "Ireland",
            "addressLocality": "Vitae adipisci non t",
            "addressRegion": "Clare",
            "postalCode": "AAA 0004",
            "streetAddress": "84 West Rocky Oak Street",
          },
          "email": "nove@mailinator.com",
          "familyName": "Newman",
          "givenName": "Minerva",
          "name": "Minerva Newman",
          "owns": {
            "@type": "Accommodation",
            "additionalProperty": [
              {
                "@type": "PropertyValue",
                "name": "Planning Permission",
                "value": "Granted",
              },
            ],
            "additionalType": "Room Special",
            "address": {
              "@type": "PostalAddress",
              "addressCountry": "Ireland",
              "addressLocality": "Vitae adipisci non t",
              "addressRegion": "Clare",
              "postalCode": "AAA 0004",
              "streetAddress": "84 West Rocky Oak Street",
            },
            "containsPlace": [
              {
                "additionalType": "shared",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "1",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "shared",
                  "value": "1",
                },
              },
              {
                "additionalType": "private",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "1",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "private",
                  "value": "1",
                },
              },
            ],
          },
          "telephone": "+353851231234",
          "worksFor": {
            "@type": "Organization",
            "name": "All Human",
          },
        },
        "name": "STL Registration",
      },
      "price": 0,
      "priceCurrency": "EUR",
    },
    {
      "@type": "Offer",
      "itemOffered": {
        "@type": "GovernmentService",
        "category": "Entire property",
        "isRelatedTo": {
          "@type": "Person",
          "address": {
            "@type": "PostalAddress",
            "addressCountry": "Ireland",
            "addressLocality": "Consequatur Ut dign",
            "addressRegion": "Cork",
            "postalCode": "AAA 0005",
            "streetAddress": "80 Cowley Avenue",
          },
          "email": "vowuraqozo@mailinator.com",
          "familyName": "Meadows",
          "givenName": "Blake",
          "name": "Blake Meadows",
          "owns": {
            "@type": "Accommodation",
            "additionalProperty": [
              {
                "@type": "PropertyValue",
                "name": "Planning Permission",
                "value": "Outstanding",
              },
            ],
            "additionalType": "Entire prop Special",
            "address": {
              "@type": "PostalAddress",
              "addressCountry": "Ireland",
              "addressLocality": "Consequatur Ut dign",
              "addressRegion": "Cork",
              "postalCode": "AAA 0005",
              "streetAddress": "80 Cowley Avenue",
            },
            "amenityFeature": [
              {
                "@type": "LocationFeatureSpecification",
                "name": "occupancy",
                "value": "1",
              },
            ],
            "numberOfBedrooms": "1",
          },
          "telephone": "+353851231234",
          "worksFor": {
            "@type": "Organization",
            "name": "All Human",
          },
        },
        "name": "STL Registration",
      },
      "price": 0,
      "priceCurrency": "EUR",
    },
    {
      "@type": "Offer",
      "itemOffered": {
        "@type": "GovernmentService",
        "category": "Multiple units",
        "isRelatedTo": {
          "@type": "Person",
          "address": {
            "@type": "PostalAddress",
            "addressCountry": "Ireland",
            "addressLocality": "Reiciendis eum moles",
            "addressRegion": "Donegal",
            "postalCode": "AAA 0006",
            "streetAddress": "84 Milton Road",
          },
          "email": "raleso@mailinator.com",
          "familyName": "Hanson",
          "givenName": "Isabella",
          "name": "Isabella Hanson",
          "owns": {
            "@type": "LodgingBusiness",
            "additionalProperty": [
              {
                "@type": "PropertyValue",
                "name": "Planning Permission",
                "value": "Outstanding",
              },
            ],
            "address": {
              "@type": "PostalAddress",
              "addressCountry": "Ireland",
              "addressLocality": "Reiciendis eum moles",
              "addressRegion": "Donegal",
              "postalCode": "AAA 0006",
              "streetAddress": "84 Milton Road",
            },
            "containsPlace": [
              {
                "@type": "Accommodation",
                "additionalType": "Activity or adventure centre",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "2",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "Room",
                  "value": "1",
                },
              },
              {
                "@type": "Accommodation",
                "additionalType": "Hostel",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "2",
                  },
                ],
              },
              {
                "@type": "Accommodation",
                "additionalType": "Apartments - student accommodation",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "2",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "Own Door Unit",
                  "value": "1",
                },
              },
              {
                "@type": "Accommodation",
                "additionalType": "Multiple Other Special",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "2",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "Number",
                  "value": "1",
                },
              },
            ],
          },
          "telephone": "+353851231234",
          "worksFor": {
            "@type": "Organization",
            "name": "All Human",
          },
        },
        "name": "STL Registration",
      },
      "price": 0,
      "priceCurrency": "EUR",
    },
  ],
  "customer": {
    "@type": "Person",
    "email": "QAtest01@parse.meetinireland.com",
    "identifier": [
      {
        "@type": "PropertyValue",
        "propertyID": "B2C",
        "value": "e86b4ebd-1a38-4757-a225-30fc2a2fc0e3",
        "valueReference": "https://fidigitalenterprisedps.b2clogin.com/6548f36a-b4b0-4666-9615-e4172baf2f4d/v2.0/",
      },
    ],
    "name": "QA test",
    "telephone": "",
    "worksFor": {
      "@type": "Organization",
      "name": "",
    },
  },
  "orderDate": "2023-01-01T00:00:00.000Z",
  "orderNumber": "00000000-0000-0000-0000-000000000000",
  "orderStatus": "OrderDelivered",
  "partOfInvoice": {
    "@type": "Invoice",
    "totalPaymentDue": {
      "@type": "PriceSpecification",
      "price": 0,
      "priceCurrency": "EUR",
    },
  },
}
`;

exports[`transformFormStateToOrder result from transformFormStateToOrder to match snapshot 1`] = `
{
  "@context": "https://schema.org",
  "@type": "Order",
  "acceptedOffer": [
    {
      "@type": "Offer",
      "itemOffered": {
        "@type": "GovernmentService",
        "category": "Shared property",
        "isRelatedTo": {
          "@type": "Person",
          "address": {
            "@type": "PostalAddress",
            "addressCountry": "Ireland",
            "addressLocality": "Aut molestiae nihil ",
            "addressRegion": "Clare",
            "postalCode": "AAA 0000",
            "streetAddress": "653 White Hague Extension",
          },
          "email": "kekyzo@mailinator.com",
          "familyName": "Obrien",
          "givenName": "Cruz",
          "name": "Cruz Obrien",
          "owns": {
            "@type": "Accommodation",
            "additionalProperty": [
              {
                "@type": "PropertyValue",
                "name": "Planning Permission",
                "value": "Granted",
              },
            ],
            "additionalType": "House",
            "address": {
              "@type": "PostalAddress",
              "addressCountry": "Ireland",
              "addressLocality": "Aut molestiae nihil",
              "addressRegion": "Cavan",
              "postalCode": "AAA 0001",
              "streetAddress": "532 West Rocky Milton Freeway",
            },
            "containsPlace": [
              {
                "additionalType": "shared",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "1",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "shared",
                  "value": "1",
                },
              },
              {
                "additionalType": "private",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "1",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "private",
                  "value": "1",
                },
              },
            ],
          },
          "telephone": "+353851231234",
          "worksFor": {
            "@type": "Organization",
            "name": "All Human",
          },
        },
        "name": "STL Registration",
      },
      "priceCurrency": "EUR",
    },
    {
      "@type": "Offer",
      "itemOffered": {
        "@type": "GovernmentService",
        "category": "Entire property",
        "isRelatedTo": {
          "@type": "Person",
          "address": {
            "@type": "PostalAddress",
            "addressCountry": "Ireland",
            "addressLocality": "Corrupti fugiat ad",
            "addressRegion": "Carlow",
            "postalCode": "AAA 0002",
            "streetAddress": "634 New Freeway",
          },
          "email": "pakicihi@mailinator.com",
          "familyName": "Dunlap",
          "givenName": "Herman",
          "name": "Herman Dunlap",
          "owns": {
            "@type": "Accommodation",
            "additionalProperty": [
              {
                "@type": "PropertyValue",
                "name": "Planning Permission",
                "value": "Granted",
              },
            ],
            "additionalType": "Apartment / Flat",
            "address": {
              "@type": "PostalAddress",
              "addressCountry": "Ireland",
              "addressLocality": "Corrupti fugiat ad",
              "addressRegion": "Carlow",
              "postalCode": "AAA 0002",
              "streetAddress": "634 New Freeway",
            },
            "amenityFeature": [
              {
                "@type": "LocationFeatureSpecification",
                "name": "occupancy",
                "value": "1",
              },
            ],
            "numberOfBedrooms": "1",
          },
          "telephone": "+353851231234",
          "worksFor": {
            "@type": "Organization",
            "name": "All Human",
          },
        },
        "name": "STL Registration",
      },
      "priceCurrency": "EUR",
    },
    {
      "@type": "Offer",
      "itemOffered": {
        "@type": "GovernmentService",
        "category": "Multiple units",
        "isRelatedTo": {
          "@type": "Person",
          "address": {
            "@type": "PostalAddress",
            "addressCountry": "American Samoa",
            "addressLocality": "Pago Pago",
            "addressRegion": "Maoputasi County",
            "postalCode": "ZIP 0000",
            "streetAddress": "Samoa West Avenue",
          },
          "email": "mejeqyhal@mailinator.com",
          "familyName": "Barron",
          "givenName": "Ian",
          "name": "Ian Barron",
          "owns": {
            "@type": "LodgingBusiness",
            "additionalProperty": [
              {
                "@type": "PropertyValue",
                "name": "Planning Permission",
                "value": "Outstanding",
              },
            ],
            "address": {
              "@type": "PostalAddress",
              "addressCountry": "Ireland",
              "addressLocality": "Ut consequat Saepe ",
              "addressRegion": "Cork",
              "postalCode": "AAA 0003",
              "streetAddress": "740 Rocky Clarendon Avenue",
            },
            "containsPlace": [
              {
                "@type": "Accommodation",
                "additionalType": "Hostel",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "1",
                  },
                ],
              },
            ],
          },
          "telephone": "+353851231234",
          "worksFor": {
            "@type": "Organization",
            "name": "All Human",
          },
        },
        "name": "STL Registration",
      },
      "priceCurrency": "EUR",
    },
    {
      "@type": "Offer",
      "itemOffered": {
        "@type": "GovernmentService",
        "category": "Shared property",
        "isRelatedTo": {
          "@type": "Person",
          "address": {
            "@type": "PostalAddress",
            "addressCountry": "Ireland",
            "addressLocality": "Vitae adipisci non t",
            "addressRegion": "Clare",
            "postalCode": "AAA 0004",
            "streetAddress": "84 West Rocky Oak Street",
          },
          "email": "nove@mailinator.com",
          "familyName": "Newman",
          "givenName": "Minerva",
          "name": "Minerva Newman",
          "owns": {
            "@type": "Accommodation",
            "additionalProperty": [
              {
                "@type": "PropertyValue",
                "name": "Planning Permission",
                "value": "Granted",
              },
            ],
            "additionalType": "Room Special",
            "address": {
              "@type": "PostalAddress",
              "addressCountry": "Ireland",
              "addressLocality": "Vitae adipisci non t",
              "addressRegion": "Clare",
              "postalCode": "AAA 0004",
              "streetAddress": "84 West Rocky Oak Street",
            },
            "containsPlace": [
              {
                "additionalType": "shared",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "1",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "shared",
                  "value": "1",
                },
              },
              {
                "additionalType": "private",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "1",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "private",
                  "value": "1",
                },
              },
            ],
          },
          "telephone": "+353851231234",
          "worksFor": {
            "@type": "Organization",
            "name": "All Human",
          },
        },
        "name": "STL Registration",
      },
      "priceCurrency": "EUR",
    },
    {
      "@type": "Offer",
      "itemOffered": {
        "@type": "GovernmentService",
        "category": "Entire property",
        "isRelatedTo": {
          "@type": "Person",
          "address": {
            "@type": "PostalAddress",
            "addressCountry": "Ireland",
            "addressLocality": "Consequatur Ut dign",
            "addressRegion": "Cork",
            "postalCode": "AAA 0005",
            "streetAddress": "80 Cowley Avenue",
          },
          "email": "vowuraqozo@mailinator.com",
          "familyName": "Meadows",
          "givenName": "Blake",
          "name": "Blake Meadows",
          "owns": {
            "@type": "Accommodation",
            "additionalProperty": [
              {
                "@type": "PropertyValue",
                "name": "Planning Permission",
                "value": "Outstanding",
              },
            ],
            "additionalType": "Entire prop Special",
            "address": {
              "@type": "PostalAddress",
              "addressCountry": "Ireland",
              "addressLocality": "Consequatur Ut dign",
              "addressRegion": "Cork",
              "postalCode": "AAA 0005",
              "streetAddress": "80 Cowley Avenue",
            },
            "amenityFeature": [
              {
                "@type": "LocationFeatureSpecification",
                "name": "occupancy",
                "value": "1",
              },
            ],
            "numberOfBedrooms": "1",
          },
          "telephone": "+353851231234",
          "worksFor": {
            "@type": "Organization",
            "name": "All Human",
          },
        },
        "name": "STL Registration",
      },
      "priceCurrency": "EUR",
    },
    {
      "@type": "Offer",
      "itemOffered": {
        "@type": "GovernmentService",
        "category": "Multiple units",
        "isRelatedTo": {
          "@type": "Person",
          "address": {
            "@type": "PostalAddress",
            "addressCountry": "Ireland",
            "addressLocality": "Reiciendis eum moles",
            "addressRegion": "Donegal",
            "postalCode": "AAA 0006",
            "streetAddress": "84 Milton Road",
          },
          "email": "raleso@mailinator.com",
          "familyName": "Hanson",
          "givenName": "Isabella",
          "name": "Isabella Hanson",
          "owns": {
            "@type": "LodgingBusiness",
            "additionalProperty": [
              {
                "@type": "PropertyValue",
                "name": "Planning Permission",
                "value": "Outstanding",
              },
            ],
            "address": {
              "@type": "PostalAddress",
              "addressCountry": "Ireland",
              "addressLocality": "Reiciendis eum moles",
              "addressRegion": "Donegal",
              "postalCode": "AAA 0006",
              "streetAddress": "84 Milton Road",
            },
            "containsPlace": [
              {
                "@type": "Accommodation",
                "additionalType": "Activity or adventure centre",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "2",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "Room",
                  "value": "1",
                },
              },
              {
                "@type": "Accommodation",
                "additionalType": "Hostel",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "2",
                  },
                ],
              },
              {
                "@type": "Accommodation",
                "additionalType": "Apartments - student accommodation",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "2",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "Own Door Unit",
                  "value": "1",
                },
              },
              {
                "@type": "Accommodation",
                "additionalType": "Multiple Other Special",
                "amenityFeature": [
                  {
                    "@type": "LocationFeatureSpecification",
                    "name": "occupancy",
                    "value": "2",
                  },
                ],
                "numberOfRooms": {
                  "@type": "QuantitativeValue",
                  "unitText": "Number",
                  "value": "1",
                },
              },
            ],
          },
          "telephone": "+353851231234",
          "worksFor": {
            "@type": "Organization",
            "name": "All Human",
          },
        },
        "name": "STL Registration",
      },
      "priceCurrency": "EUR",
    },
  ],
  "customer": {
    "@type": "Person",
    "email": "QAtest01@parse.meetinireland.com",
    "identifier": [
      {
        "@type": "PropertyValue",
        "propertyID": "B2C",
        "value": "e86b4ebd-1a38-4757-a225-30fc2a2fc0e3",
        "valueReference": "https://fidigitalenterprisedps.b2clogin.com/6548f36a-b4b0-4666-9615-e4172baf2f4d/v2.0/",
      },
    ],
    "name": "QA test",
    "telephone": "",
    "worksFor": {
      "@type": "Organization",
      "name": "",
    },
  },
  "partOfInvoice": {
    "@type": "Invoice",
    "totalPaymentDue": {
      "@type": "PriceSpecification",
      "priceCurrency": "EUR",
    },
  },
}
`;
